# stable-baselines3

./: .gitignore  NOTES.md  atari_use_objects.sh  atari_use_scores.sh  experiment_grid.py  go.sh  install.txt  plot.py  plot_2.py  pyproject.toml  req.txt  train.py  train_atari.py  train_spma_pd.py  visualize.py
custom_tests/: example.py
debug/: debug.py  debug_plot.py
debug/test/: events.out.tfevents.1753208598.cs-mars-04.1303950.0  events.out.tfevents.1753208618.cs-mars-04.1304226.0  events.out.tfevents.1753208657.cs-mars-04.1304699.0  progress0.csv  progress1.csv
debug/test-alm/: events.out.tfevents.1753216662.cs-mars-04.1403388.0  events.out.tfevents.1753216673.cs-mars-04.1403584.0  events.out.tfevents.1753216690.cs-mars-04.1403867.0  events.out.tfevents.1753216735.cs-mars-04.1404454.0  events.out.tfevents.1753216971.cs-mars-04.1407939.0  events.out.tfevents.1753216985.cs-mars-04.1408208.0  events.out.tfevents.1753217249.cs-mars-04.1411323.0  events.out.tfevents.1753217302.cs-mars-04.1412108.0  events.out.tfevents.1753217522.cs-mars-04.1414847.0  events.out.tfevents.1753217667.cs-mars-04.1416695.0  progress1.csv
debug/test-alm-for-plot/: events.out.tfevents.1753225011.cs-mars-04.1483038.0  events.out.tfevents.1753225577.cs-mars-04.1488978.0  events.out.tfevents.1753225672.cs-mars-04.1490292.0  events.out.tfevents.1753231397.cs-mars-04.1551715.0  progress1.csv  progress2.csv
runs/atari_objects/task_id_0/: progress.csv  (+1 more)
stable_baselines3/: __init__.py
stable_baselines3/common/: callbacks.py  cost_buffers.py  cost_decision_aware_on_policy_algorithm.py  cost_decision_aware_policies.py  decision_aware_base_class.py  decision_aware_on_policy_algorithm.py  decision_aware_policies.py  evaluation.py  hj_off_policy_algorithm.py  lagrange.py  logger.py  monitor.py  utils.py
stable_baselines3/dqn/: __init__.py  hj_dqn.py
stable_baselines3/spma/: __init__.py  policies.py  spma.py
stable_baselines3/spma_alm/: __init__.py  spma_alm.py
stable_baselines3/spma_pd/: __init__.py  spma_pd.py
train/: plot_callback.py  spma_pd_eta_0.1_use_line_search_lag_0.csv.monitor.csv  spma_pd_eta_0.3_use_line_search_2.monitor.csv  spma_pd_eta_0.3_use_line_search_lag.monitor.csv  spma_pd_eta_0.3_use_line_search_rc.monitor.csv  spma_pd_eta_0.3_use_line_search_rc_new_costs.monitor.csv  spma_pd_eta_0.3_use_line_search_rc_new_costs_2.monitor.csv  spma_pd_eta_0.5_use_line_search_2.monitor.csv  spma_pd_eta_0.5_use_line_search_rc.monitor.csv  spma_pd_eta_0.7_use_line_search_2.monitor.csv  train.py  train_safety_gym.py  train_spma.py  train_spma_pd.py  transfer.sh  visualize.py
train/spma_pd_eta_0.3_use_line_search.monitor/: spma_pd_eta_0.3_use_line_search.monitor.csv
train/spma_pd_eta_0.5_use_line_search.monitor/: spma_pd_eta_0.5_use_line_search.monitor.csv
train/spma_pd_eta_0.7_use_line_search.monitor/: spma_pd_eta_0.7_use_line_search.monitor.csv
train/spma_pd_eta_0.9_use_line_search.monitor/: spma_pd_eta_0.9_use_line_search.monitor.csv
train/spma_pd_eta_1.0_use_line_search.monitor/: spma_pd_eta_1.0_use_line_search.monitor.csv
(+155 files in other folders)
