[tool.ruff]
# Same as Black.
line-length = 127
# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# See https://beta.ruff.rs/docs/rules/
select = ["E", "F", "B", "UP", "C90", "RUF"]
# B028: Ignore explicit stacklevel`
# RUF013: Too many false positives (implicit optional)
ignore = ["B028", "RUF013"]

[tool.ruff.lint.per-file-ignores]
# Default implementation in abstract methods
"./stable_baselines3/common/callbacks.py" = ["B027"]
"./stable_baselines3/common/noise.py" = ["B027"]
# ClassVar, implicit optional check not needed for tests
"./tests/*.py" = ["RUF012", "RUF013"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.black]
line-length = 127

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
exclude = """(?x)(
    tests/test_logger.py$
    | tests/test_train_eval_mode.py$
  )"""

[tool.pytest.ini_options]
# Deterministic ordering for tests; useful for pytest-xdist.
env = ["PYTHONHASHSEED=0"]

filterwarnings = [
    # multiprocessing and fork method, use of fork may lead to deadlocks
    "ignore::DeprecationWarning:multiprocessing.popen_fork",
    # A2C/PPO on GPU
    "ignore:You are trying to run (PPO|A2C) on the GPU",
    # Tensorboard warnings
    "ignore::DeprecationWarning:tensorboard",
    # Gymnasium warnings
    "ignore::UserWarning:gymnasium",
    # Taxi-v3 and CliffWalking-v0
    "ignore::DeprecationWarning:gymnasium.envs.registration",
    # tqdm warning about rich being experimental
    "ignore:rich is experimental",
]
markers = [
    "expensive: marks tests as expensive (deselect with '-m \"not expensive\"')",
]

[tool.coverage.run]
disable_warnings = ["couldnt-parse"]
branch = false
omit = [
    "tests/*",
    "setup.py",
    # Require graphical interface
    "stable_baselines3/common/results_plotter.py",
    # Require ffmpeg
    "stable_baselines3/common/vec_env/vec_video_recorder.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError()",
    "if typing.TYPE_CHECKING:",
    "if TYPE_CHECKING:",
]

[project]
name = "stable-baselines3"
version = "2.7.0a0"
description = "Pytorch version of Stable Baselines, implementations of reinforcement learning algorithms."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.1,<2.0",
    "numpy>=1.20,<3.0",
    # "torch>=2.3,<3.0",
    "torch==2.6.0", # last torch version supporting cuda 12.4
    # For saving models
    "cloudpickle",
    # -- Extra --
    # For render
    "opencv-python",
    "pygame-ce",
    # Tensorboard support
    "tensorboard>=2.9.1",
    # Checking memory taken by replay buffer
    "psutil",
    # For progress bar callback
    "tqdm",
    "rich",
    # For atari games,
    "ale-py>=0.9.0",
    "pillow",
    # For plotting and loading results
    "pandas",
    "matplotlib",
    "ruff>=0.15.14",
    "ocatari>=2.2.1",
    "wandb>=0.27.0",
]
